src/antlr/parsParser.java
// Generated from /home/tiago/IdeaProjects/Trabalho_Compiladores/pars.g4 by ANTLR 4.10.1

package antlr;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class parsParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.10.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, ATRIBUIR=14, A=15, TIPO_INT=16, 
		TIPO_STRING=17, TIPO_BOOL=18, TIPO_FLOAT=19, BOOL=20, ID=21, COMMENT=22, 
		WS=23, NUM=24, STRING=25, FLOAT=26;
	public static final int
		RULE_prog = 0, RULE_decl = 1, RULE_atri = 2, RULE_comp = 3, RULE_expr = 4;
	private static String[] makeRuleNames() {
		return new String[] {
			"prog", "decl", "atri", "comp", "expr"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "':DECLARACAO'", "':ALGORITMO'", "'>'", "'<'", "'>='", "'<='", 
			"'=='", "'!='", "'+'", "'-'", "'*'", "'/'", "'%'", "'ATRIBUIR'", "'A'", 
			"'int'", "'string'", "'bool'", "'float'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, "ATRIBUIR", "A", "TIPO_INT", "TIPO_STRING", "TIPO_BOOL", 
			"TIPO_FLOAT", "BOOL", "ID", "COMMENT", "WS", "NUM", "STRING", "FLOAT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "pars.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public parsParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgContext extends ParserRuleContext {
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
	 
		public ProgContext() { }
		public void copyFrom(ProgContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ProgramContext extends ProgContext {
		public List<DeclContext> decl() {
			return getRuleContexts(DeclContext.class);
		}
		public DeclContext decl(int i) {
			return getRuleContext(DeclContext.class,i);
		}
		public List<AtriContext> atri() {
			return getRuleContexts(AtriContext.class);
		}
		public AtriContext atri(int i) {
			return getRuleContext(AtriContext.class,i);
		}
		public ProgramContext(ProgContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof parsListener ) ((parsListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof parsListener ) ((parsListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof parsVisitor ) return ((parsVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		int _la;
		try {
			_localctx = new ProgramContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(10);
			match(T__0);
			setState(14);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << TIPO_INT) | (1L << TIPO_STRING) | (1L << TIPO_BOOL) | (1L << TIPO_FLOAT))) != 0)) {
				{
				{
				setState(11);
				decl();
				}
				}
				setState(16);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(17);
			match(T__1);
			setState(21);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ATRIBUIR) {
				{
				{
				setState(18);
				atri();
				}
				}
				setState(23);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclContext extends ParserRuleContext {
		public DeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_decl; }
	 
		public DeclContext() { }
		public void copyFrom(DeclContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class DeclaracaoStringContext extends DeclContext {
		public TerminalNode TIPO_STRING() { return getToken(parsParser.TIPO_STRING, 0); }
		public TerminalNode ID() { return getToken(parsParser.ID, 0); }
		public DeclaracaoStringContext(DeclContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof parsListener ) ((parsListener)listener).enterDeclaracaoString(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof parsListener ) ((parsListener)listener).exitDeclaracaoString(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof parsVisitor ) return ((parsVisitor<? extends T>)visitor).visitDeclaracaoString(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class DeclaracaoBoolContext extends DeclContext {
		public TerminalNode TIPO_BOOL() { return getToken(parsParser.TIPO_BOOL, 0); }
		public TerminalNode ID() { return getToken(parsParser.ID, 0); }
		public DeclaracaoBoolContext(DeclContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof parsListener ) ((parsListener)listener).enterDeclaracaoBool(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof parsListener ) ((parsListener)listener).exitDeclaracaoBool(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof parsVisitor ) return ((parsVisitor<? extends T>)visitor).visitDeclaracaoBool(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class DeclaracaoFloatContext extends DeclContext {
		public TerminalNode TIPO_FLOAT() { return getToken(parsParser.TIPO_FLOAT, 0); }
		public TerminalNode ID() { return getToken(parsParser.ID, 0); }
		public DeclaracaoFloatContext(DeclContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof parsListener ) ((parsListener)listener).enterDeclaracaoFloat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof parsListener ) ((parsListener)listener).exitDeclaracaoFloat(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof parsVisitor ) return ((parsVisitor<? extends T>)visitor).visitDeclaracaoFloat(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class DeclaracaoIntContext extends DeclContext {
		public TerminalNode TIPO_INT() { return getToken(parsParser.TIPO_INT, 0); }
		public TerminalNode ID() { return getToken(parsParser.ID, 0); }
		public DeclaracaoIntContext(DeclContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof parsListener ) ((parsListener)listener).enterDeclaracaoInt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof parsListener ) ((parsListener)listener).exitDeclaracaoInt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof parsVisitor ) return ((parsVisitor<? extends T>)visitor).visitDeclaracaoInt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclContext decl() throws RecognitionException {
		DeclContext _localctx = new DeclContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_decl);
		try {
			setState(32);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case TIPO_INT:
				_localctx = new DeclaracaoIntContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(24);
				match(TIPO_INT);
				setState(25);
				match(ID);
				}
				break;
			case TIPO_FLOAT:
				_localctx = new DeclaracaoFloatContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(26);
				match(TIPO_FLOAT);
				setState(27);
				match(ID);
				}
				break;
			case TIPO_STRING:
				_localctx = new DeclaracaoStringContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(28);
				match(TIPO_STRING);
				setState(29);
				match(ID);
				}
				break;
			case TIPO_BOOL:
				_localctx = new DeclaracaoBoolContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(30);
				match(TIPO_BOOL);
				setState(31);
				match(ID);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AtriContext extends ParserRuleContext {
		public AtriContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_atri; }
	 
		public AtriContext() { }
		public void copyFrom(AtriContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class AtribuirBoolContext extends AtriContext {
		public TerminalNode ATRIBUIR() { return getToken(parsParser.ATRIBUIR, 0); }
		public TerminalNode BOOL() { return getToken(parsParser.BOOL, 0); }
		public TerminalNode A() { return getToken(parsParser.A, 0); }
		public TerminalNode ID() { return getToken(parsParser.ID, 0); }
		public AtribuirBoolContext(AtriContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof parsListener ) ((parsListener)listener).enterAtribuirBool(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof parsListener ) ((parsListener)listener).exitAtribuirBool(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof parsVisitor ) return ((parsVisitor<? extends T>)visitor).visitAtribuirBool(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class AtribuirNumContext extends AtriContext {
		public TerminalNode ATRIBUIR() { return getToken(parsParser.ATRIBUIR, 0); }
		public TerminalNode NUM() { return getToken(parsParser.NUM, 0); }
		public TerminalNode A() { return getToken(parsParser.A, 0); }
		public TerminalNode ID() { return getToken(parsParser.ID, 0); }
		public AtribuirNumContext(AtriContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof parsListener ) ((parsListener)listener).enterAtribuirNum(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof parsListener ) ((parsListener)listener).exitAtribuirNum(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof parsVisitor ) return ((parsVisitor<? extends T>)visitor).visitAtribuirNum(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class AtribuirComparationContext extends AtriContext {
		public TerminalNode ATRIBUIR() { return getToken(parsParser.ATRIBUIR, 0); }
		public CompContext comp() {
			return getRuleContext(CompContext.class,0);
		}
		public TerminalNode A() { return getToken(parsParser.A, 0); }
		public TerminalNode ID() { return getToken(parsParser.ID, 0); }
		public AtribuirComparationContext(AtriContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof parsListener ) ((parsListener)listener).enterAtribuirComparation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof parsListener ) ((parsListener)listener).exitAtribuirComparation(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof parsVisitor ) return ((parsVisitor<? extends T>)visitor).visitAtribuirComparation(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class AtribuirFloatContext extends AtriContext {
		public TerminalNode ATRIBUIR() { return getToken(parsParser.ATRIBUIR, 0); }
		public TerminalNode FLOAT() { return getToken(parsParser.FLOAT, 0); }
		public TerminalNode A() { return getToken(parsParser.A, 0); }
		public TerminalNode ID() { return getToken(parsParser.ID, 0); }
		public AtribuirFloatContext(AtriContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof parsListener ) ((parsListener)listener).enterAtribuirFloat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof parsListener ) ((parsListener)listener).exitAtribuirFloat(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof parsVisitor ) return ((parsVisitor<? extends T>)visitor).visitAtribuirFloat(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class AtribuirStringContext extends AtriContext {
		public TerminalNode ATRIBUIR() { return getToken(parsParser.ATRIBUIR, 0); }
		public TerminalNode STRING() { return getToken(parsParser.STRING, 0); }
		public TerminalNode A() { return getToken(parsParser.A, 0); }
		public TerminalNode ID() { return getToken(parsParser.ID, 0); }
		public AtribuirStringContext(AtriContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof parsListener ) ((parsListener)listener).enterAtribuirString(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof parsListener ) ((parsListener)listener).exitAtribuirString(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof parsVisitor ) return ((parsVisitor<? extends T>)visitor).visitAtribuirString(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class AtribuirOperationContext extends AtriContext {
		public TerminalNode ATRIBUIR() { return getToken(parsParser.ATRIBUIR, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode A() { return getToken(parsParser.A, 0); }
		public TerminalNode ID() { return getToken(parsParser.ID, 0); }
		public AtribuirOperationContext(AtriContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof parsListener ) ((parsListener)listener).enterAtribuirOperation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof parsListener ) ((parsListener)listener).exitAtribuirOperation(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof parsVisitor ) return ((parsVisitor<? extends T>)visitor).visitAtribuirOperation(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AtriContext atri() throws RecognitionException {
		AtriContext _localctx = new AtriContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_atri);
		try {
			setState(60);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				_localctx = new AtribuirNumContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(34);
				match(ATRIBUIR);
				setState(35);
				match(NUM);
				setState(36);
				match(A);
				setState(37);
				match(ID);
				}
				break;
			case 2:
				_localctx = new AtribuirStringContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(38);
				match(ATRIBUIR);
				setState(39);
				match(STRING);
				setState(40);
				match(A);
				setState(41);
				match(ID);
				}
				break;
			case 3:
				_localctx = new AtribuirBoolContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(42);
				match(ATRIBUIR);
				setState(43);
				match(BOOL);
				setState(44);
				match(A);
				setState(45);
				match(ID);
				}
				break;
			case 4:
				_localctx = new AtribuirFloatContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(46);
				match(ATRIBUIR);
				setState(47);
				match(FLOAT);
				setState(48);
				match(A);
				setState(49);
				match(ID);
				}
				break;
			case 5:
				_localctx = new AtribuirComparationContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(50);
				match(ATRIBUIR);
				setState(51);
				comp();
				setState(52);
				match(A);
				setState(53);
				match(ID);
				}
				break;
			case 6:
				_localctx = new AtribuirOperationContext(_localctx);
				enterOuterAlt(_localctx, 6);
				{
				setState(55);
				match(ATRIBUIR);
				setState(56);
				expr(0);
				setState(57);
				match(A);
				setState(58);
				match(ID);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CompContext extends ParserRuleContext {
		public CompContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comp; }
	 
		public CompContext() { }
		public void copyFrom(CompContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class MenorIgualContext extends CompContext {
		public List<TerminalNode> ID() { return getTokens(parsParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(parsParser.ID, i);
		}
		public MenorIgualContext(CompContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof parsListener ) ((parsListener)listener).enterMenorIgual(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof parsListener ) ((parsListener)listener).exitMenorIgual(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof parsVisitor ) return ((parsVisitor<? extends T>)visitor).visitMenorIgual(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class IgualContext extends CompContext {
		public List<TerminalNode> ID() { return getTokens(parsParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(parsParser.ID, i);
		}
		public IgualContext(CompContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof parsListener ) ((parsListener)listener).enterIgual(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof parsListener ) ((parsListener)listener).exitIgual(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof parsVisitor ) return ((parsVisitor<? extends T>)visitor).visitIgual(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class MaiorIgualContext extends CompContext {
		public List<TerminalNode> ID() { return getTokens(parsParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(parsParser.ID, i);
		}
		public MaiorIgualContext(CompContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof parsListener ) ((parsListener)listener).enterMaiorIgual(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof parsListener ) ((parsListener)listener).exitMaiorIgual(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof parsVisitor ) return ((parsVisitor<? extends T>)visitor).visitMaiorIgual(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class MaiorQueContext extends CompContext {
		public List<TerminalNode> ID() { return getTokens(parsParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(parsParser.ID, i);
		}
		public MaiorQueContext(CompContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof parsListener ) ((parsListener)listener).enterMaiorQue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof parsListener ) ((parsListener)listener).exitMaiorQue(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof parsVisitor ) return ((parsVisitor<? extends T>)visitor).visitMaiorQue(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class DiferenteContext extends CompContext {
		public List<TerminalNode> ID() { return getTokens(parsParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(parsParser.ID, i);
		}
		public DiferenteContext(CompContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof parsListener ) ((parsListener)listener).enterDiferente(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof parsListener ) ((parsListener)listener).exitDiferente(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof parsVisitor ) return ((parsVisitor<? extends T>)visitor).visitDiferente(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class MenorQueContext extends CompContext {
		public List<TerminalNode> ID() { return getTokens(parsParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(parsParser.ID, i);
		}
		public MenorQueContext(CompContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof parsListener ) ((parsListener)listener).enterMenorQue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof parsListener ) ((parsListener)listener).exitMenorQue(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof parsVisitor ) return ((parsVisitor<? extends T>)visitor).visitMenorQue(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CompContext comp() throws RecognitionException {
		CompContext _localctx = new CompContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_comp);
		try {
			setState(80);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				_localctx = new MaiorQueContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(62);
				match(ID);
				setState(63);
				match(T__2);
				setState(64);
				match(ID);
				}
				break;
			case 2:
				_localctx = new MenorQueContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(65);
				match(ID);
				setState(66);
				match(T__3);
				setState(67);
				match(ID);
				}
				break;
			case 3:
				_localctx = new MaiorIgualContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(68);
				match(ID);
				setState(69);
				match(T__4);
				setState(70);
				match(ID);
				}
				break;
			case 4:
				_localctx = new MenorIgualContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(71);
				match(ID);
				setState(72);
				match(T__5);
				setState(73);
				match(ID);
				}
				break;
			case 5:
				_localctx = new IgualContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(74);
				match(ID);
				setState(75);
				match(T__6);
				setState(76);
				match(ID);
				}
				break;
			case 6:
				_localctx = new DiferenteContext(_localctx);
				enterOuterAlt(_localctx, 6);
				{
				setState(77);
				match(ID);
				setState(78);
				match(T__7);
				setState(79);
				match(ID);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
